# Banking-app

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ServerApp  admin.html  app.cpp  app.js  banca_sql.sql  cmake_install.cmake  dashboard.html  index.html  login.html  register.html  sevicii.html  style.css
Screenshots/: desktop.ini
site_bancar/: admin.html  app.js  dashboard.html  style.css
